Fix nav overlap

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1907,6 +1907,9 @@ padding-top:50px;
 
   justify-content: space-between;
   width:90vw;
+
+    // bottom:20px;
+
 }
 .nav-button{
   font-size:2.75em;
@@ -1923,7 +1926,7 @@ padding-top:50px;
 }
 .middle-inner{
   justify-content: center;
-width:500px;
+width:360px;
 }
 .top{
   justify-content: flex-end;
